2013-05-07 Frederik "Freso" S. Olesen <freso.dk@gmail.com>

	* lwjgl-2.9.0-1 :
	Simple version bump.
	See http://lwjgl.org/forum/index.php?topic=4974 for version changes.

2012-11-05 Frederik "Freso" S. Olesen <freso.dk@gmail.com>

	* lwjgl-2.8.5-1 :
	Simple version bump.
	See http://lwjgl.org/forum/index.php?topic=4798 for version changes.

2012-06-09 Frederik "Freso" S. Olesen <freso.dk@gmail.com>

	* lwjgl-2.8.4-1 :
	Simple version bump.
	See http://lwjgl.org/forum/index.php?topic=4608 for version changes.

2012-02-21 Frederik "Freso" S. Olesen <freso.dk@gmail.com>

	* lwjgl-2.8.3-1 :
	Version bump.
	No longer runs binary files through strip, to avoid breaking
	cross-platform compatibility.

2011-11-22 Frederik "Freso" S. Olesen <freso.dk@gmail.com>

	* lwjgl-2.8.2-1 :
	Simple version bump.

2011-10-29 Frederik "Freso" S. Olesen <freso.dk@gmail.com>

	* lwjgl-2.8.1-1 :
	Simple version bump.

2011-10-14 Frederik "Freso" S. Olesen <freso.dk@gmail.com>

	* lwjgl-2.8.0-1 :
	First PKGBUILD for the library.
	The reason we install it all in /usr/share/ and not in Java's library path, is
	that this is not recommended by the LWJGL developers. The libraries should
	rather be included in the development project it self. See
	http://lwjgl.org/wiki/index.php?title=Downloading_and_Setting_Up_LWJGL
	for additional information