@@ -1,3 +1,9 @@
+2013-12-12 Frederik "Freso" S. Olesen <freso.dk@gmail.com>
+
+	* lwjgl-2.9.1-1 :
+	Simple version bump.
+	See http://lwjgl.org/forum/index.php?topic=5259 for version changes.
+
 2013-05-07 Frederik "Freso" S. Olesen <freso.dk@gmail.com>
 
 	* lwjgl-2.9.0-1 :
